<resources>
    <string name="app_name">LitHub</string>
    <string name="welcome_to_lithub">Welcome to LitHub</string>
    <string name="continue_without_login">Continue Without Login</string>
    <string name="login">Login</string>
    <string name="please_login">Please Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_signup">New User? Signup</string>
    <string name="new_user">New User?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in">Sign in</string>
    <string name="admin_dashboard">Admin DashBoard</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="user_dashboard">User Dashboard</string>
    <string name="add_category">+ Add Category</string>
    <string name="add_a_new_category">Add a new Category</string>
    <string name="category_title">Category Title</string>
    <string name="submit">Submit</string>
    <string name="submit1">SUBMIT</string>
    <string name="search">Search</string>
    <string name="category_titles">Category Title</string>
    <string name="add_a_new_book">Add a new Book</string>
    <string name="book_title">Book Title</string>
    <string name="book_description">Book Description</string>
    <string name="book_category">Book Category</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="size">Size</string>
    <string name="dd_mm_year">dd/MM/year</string>
    <string name="books">Books</string>
    <string name="edit_book_info">Edit Book Info</string>
    <string name="update">Update</string>
    <string name="book_details">Book Details</string>
    <string name="read">Read</string>
    <string name="download">Download</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>