<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/splashback"
    tools:context=".activities.MainActivity">
    <ImageView
        android:id="@+id/main_icon"
        android:src="@drawable/logof"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/welcome_to_lithub"
        android:textColor="@color/black"
        android:textSize="24sp" />
    <Button
        android:id="@+id/loginBtn"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/skipBtn"
        android:text="@string/login"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/purple_500"
        android:textColor="@color/white"
        android:background="@drawable/shape_button1"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/skipBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="@color/transparent"
        android:layout_alignParentBottom="true"
        android:text="@string/continue_without_login"
        android:textColor="@color/purple_500"
        />


</RelativeLayout>