<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashback"
    tools:context=".activities.BookListPdfAdmin">
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar"
        >

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@color/transparent"
            android:src="@drawable/baseline_arrow_back_24"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/books"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/category"
            android:textColor="@color/white"
            android:layout_below="@+id/title"
            />
    </RelativeLayout>

    <EditText
        android:id="@+id/searchText"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarRl"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:drawableStart="@drawable/baseline_search_24"
        android:drawablePadding="10dp"
        android:hint="@string/search"
        android:padding="10dp"
        android:textColorHint="@color/grey"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bookList"
        android:layout_below="@+id/searchText"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_pdf_admin"
        />

</RelativeLayout>