<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashback"
    tools:context=".activities.DashBoardAdminActivity">
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/shape_toolbar2">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/title"
         android:layout_marginTop="8dp"
         android:text="@string/admin_dashboard"
         android:layout_centerHorizontal="true"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:fontFamily="@font/poppins_light"
         android:textStyle="bold"
         />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_below="@+id/title"
        android:id="@+id/email"
        android:layout_marginTop="4dp"
        android:text="@string/abc_gmail_com"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_light"
        />

        <ImageButton
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@color/transparent"
            android:src="@drawable/baseline_logout_new_24"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </RelativeLayout>

    <EditText
        android:id="@+id/searchText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarRl"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:drawableStart="@drawable/baseline_search_24"
        android:hint="@string/search"
        android:padding="10dp"
        android:textColorHint="@color/grey"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoriesRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchText"
        android:layout_above="@id/bottomLL"
        tools:listitem="@layout/row_category"
        android:layout_margin="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />
    <LinearLayout
        android:gravity="center"
        android:id="@+id/bottomLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/addCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_category"
            android:fontFamily="@font/poppins_light"
            android:textSize="16sp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_button1"
            android:minHeight="50dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/pdfFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_pdf_add_24"
            app:backgroundTint="@color/purple_500"
            app:fabCustomSize="50dp"
            app:tint="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>
</RelativeLayout>