<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashback"
    tools:context=".activities.UploadPDFActivity">
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:background="@drawable/shape_toolbar2"
        android:layout_height="250dp">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/transparent"
            android:padding="5dp"
            android:src="@drawable/baseline_arrow_back_24"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        <ImageView
            android:id="@+id/iconTl"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/backBtn"
            android:src="@drawable/logof"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconTl"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/add_a_new_book"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <ImageButton
            android:id="@+id/attachPdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/transparent"
            android:padding="5dp"
            android:src="@drawable/baseline_attach_pdf_24"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </RelativeLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="225dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/editBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext"
            android:drawableStart="@drawable/baseline_picture_as_pdf_grey_24"
            android:drawablePadding="10dp"
            android:textSize="16sp"
            android:hint="@string/book_title"
            android:inputType="textPersonName|textCapWords"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"

            tools:ignore="DuplicateClickableBoundsCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descTl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/titleTl"
        android:layout_marginTop="5dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/editDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:background="@drawable/shape_edittext"
            android:drawableStart="@drawable/baseline_picture_as_pdf_grey_24"
            android:drawablePadding="10dp"
            android:hint="@string/book_description"
            android:inputType="textMultiLine|textCapSentences"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"

            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/categorySelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descTl"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_edittext"
        android:drawableStart="@drawable/baseline_category_24"
        android:drawableEnd="@drawable/baseline_keyboard_arrow_down_24"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/book_category"
        android:textColorHint="@color/grey"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        />
    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/categorySelect"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/upload"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_light"
        android:textSize="18sp"
        android:background="@color/purple_500"

        />
</RelativeLayout>